# snake-AI

./: .gitignore  README.md
cpp/: CMakeLists.txt  custom.h  screen.cpp  view.cpp
python/: custom.py  screen.py
